--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -141,7 +141,8 @@
   "Copy Link": "リンクをコピーする",
   "Copying to clipboard was successful!": "クリップボードへのコピーが成功しました！",
   "Create": "作成する",
-  "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "以下のクエリのヘッダーとして、厳密に 3～5 語の制限を守り、' タイトル ' という言葉の使用を避けて、簡潔な 3～5 語のフレーズを作成してください",
+  "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "以下のクエリのヘッダーとして、厳密に 3-5 語の制限を守り、' タイトル ' という言葉の使用を避けて、簡潔な 3-5 語のフレーズを作成してください",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "次のクエリに対して、3-10 語の簡潔なフレーズを検索キーワードとして作成し、3-10 語の制限を厳守してください:",
   "Create a modelfile": "モデルファイルを作成する",
   "Create Account": "アカウントを作成する",
   "Create new key": "新しいキーを作成する",
@@ -686,6 +687,7 @@
   "Download DeGPT to obtain rewards": "報酬を得るために DeGPT をダウンロードしてください。",
   "Switch Models": "モデルを切り替える",
   "Suitable for most tasks": "多くのタスクに適しています",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "ほとんどのタスクに適しています, 性能は GPT-4o に匹敵します",
   "Take photos to solve math problems": "数学問題を解決するために写真を撮る",
   "Support image recognition": "画像認識をサポートしています",
   "Optimize code writing": "コードの書き方を最適化します",
@@ -806,6 +808,16 @@
   "Search the web": "ウェブで検索する",
   "search": "検索",
   "Web Search": "ウェブ検索",
+  "YouTube Search": "YouTube 検索",
+  "Twitter Search": "Twitter 検索",
   "Web Searching ...": "ウェブ検索中...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "深く考え、数学や創作的な文章執筆などのタスクにおいて o3 のパフォーマンスに匹敵する成果を出す"
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "深く考え、数学や創作的な文章執筆などのタスクにおいて o3 のパフォーマンスに匹敵する成果を出す",
+  "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 認証は 10 分に 1 回までに制限されています，後でもう一度お試しください。",
+  "A single IP address can be used for a maximum of two KYC verifications": "単一の IP アドレスは、最大で 2 回の KYC 認証に使用できます。",
+  "Check kyc failed, Please try again.": "KYC 認証に失敗しました。もう一度試してください。",
+  "One email can only be used for KYC verification once": "1 つのメールアドレスは KYC 認証に 1 回しか使用できません",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "上記の質問の中で最後の質問の内容が何に関するものかを把握し、内容のみを出力してください",
+  "Summarize based on the above YouTube search results:": "上記の YouTube 検索結果に基づいて要約してください：",
+  "Summarize based on the above Twitter search results:": "上記の Twitter 検索結果に基づいて要約してください。",
+  "Summarize based on the above web search results:": "上記のウェブ検索結果に基づいて要約してください："
 }
