--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -140,7 +140,8 @@
   "Copy Link": "링크 복사",
   "Copying to clipboard was successful!": "클립보드로 복사가 성공했습니다!",
   "Create": "생성",
-  "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "다음 질문의 헤더로 3 - 5 단어로 구성된 간결한 구문을 생성하며, '제목'이라는 단어를 사용하지 않고 3 - 5 단어 제한을 엄격히 따릅니다:",
+  "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "다음 질문의 헤더로 3-5 단어로 구성된 간결한 구문을 생성하며, '제목'이라는 단어를 사용하지 않고 3-5 단어 제한을 엄격히 따릅니다:",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "다음 쿼리에 대해 3-10단어의 간결한 구를 검색 키워드로 만들어 주세요. 3-10단어 제한을 엄격히 지켜주세요:",
   "Create a modelfile": "모델 파일 생성",
   "Create Account": "계정 생성",
   "Create new key": "새로운 키 생성",
@@ -686,6 +687,7 @@
   "Download DeGPT to obtain rewards": "보상을 받기 위해 DeGPT를 다운로드하세요.",
   "Switch Models": "모델 전환",
   "Suitable for most tasks": "대부분의 작업에 적합합니다",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "대부분의 작업에 적합합니다, 성능은 GPT-4o 과 견줍니다",
   "Take photos to solve math problems": "수학 문제를 해결하기 위해 사진을 찍는다",
   "Support image recognition": "이미지 인식을 지원합니다",
   "Optimize code writing": "코드 작성 최적화합니다",
@@ -806,6 +808,16 @@
   "Search the web": "웹에서 검색하다",
   "search": "검색",
   "Web Search": "웹 검색",
+  "YouTube Search": "YouTube 검색",
+  "Twitter Search": "Twitter 검색",
   "Web Searching ...": "웹 검색 중...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "심층적으로 생각하고 수학 및 창작 글쓰기와 같은 작업에서 o3의 성과에 맞먹을 수 있도록 하기"
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "심층적으로 생각하고 수학 및 창작 글쓰기와 같은 작업에서 o3의 성과에 맞먹을 수 있도록 하기",
+  "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 인증은 10분에 한 번으로 제한됩니다, 나중에 다시 시도해 주세요.",
+  "A single IP address can be used for a maximum of two KYC verifications": "단일 IP 주소는 최대 두 번의 KYC 인증에 사용할 수 있습니다.",
+  "Check kyc failed, Please try again.": "KYC 인증에 실패했습니다. 다시 시도해 주세요.",
+  "One email can only be used for KYC verification once": "하나의 이메일 주소는 KYC 인증에 한 번만 사용할 수 있습니다",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "위 질문에서 마지막으로 한 질문의 내용이 무엇에 대한 것인지 파악하고 내용만 출력하세요",
+  "Summarize based on the above YouTube search results:": "위의 YouTube 검색 결과를 바탕으로 요약하세요:",
+  "Summarize based on the above Twitter search results:": "위의 Twitter 검색 결과를 바탕으로 요약하세요:",
+  "Summarize based on the above web search results:": "위의 웹 검색 결과를 바탕으로 요약하세요:"
 }
