--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -141,6 +141,7 @@
   "Copying to clipboard was successful!": "คัดลอกไปยังคลิปบอร์ดสำเร็จ!",
   "Create": "สร้าง",
   "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "สร้างคำหรือวลีที่สั้นๆ 3 - 5 คำเป็นหัวข้อสำหรับคำถามต่อไปโดยยึดติดตามขีดจำกัด 3 - 5 คำและหลีกเลี่ยงการใช้คำ 'title':",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "สร้าง구hrase สั้นๆ มี 3-10 คำ เป็นคำค้นสำหรับคำขอที่ตามมา ระบุจำนวนคำอย่างเคร่งครัดในช่วง 3-10 คำ:",
   "Create a modelfile": "สร้างไฟล์โมเดล",
   "Create Account": "สร้างบัญชี",
   "Create new key": "สร้างคีย์ใหม่",
@@ -685,6 +686,7 @@
   "Download DeGPT to obtain rewards": "ดาวน์โหลด DeGPT เพื่อรับรางวัล",
   "Switch Models": "สลับแบบจำลอง",
   "Suitable for most tasks": "เหมาะสำหรับงานส่วนใหญ่",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "เหมาะสำหรับงานส่วนใหญ่ ความสามารถเปรียบเทียบได้กับ GPT-4o",
   "Take photos to solve math problems": "ถ่ายรูปเพื่อแก้ปัญหาคณิตศาสตร์",
   "Support image recognition": "รองรับการจำแนกภาพ",
   "Optimize code writing": "ปรับปรุงการเขียนโค้ด",
@@ -805,6 +807,16 @@
   "Search the web": "ค้นหาในเว็บ",
   "search": "ค้นหา",
   "Web Search": "การค้นหาเว็บ",
+  "YouTube Search": "การค้นหาใน YouTube",
+  "Twitter Search": "การค้นหาใน Twitter",
   "Web Searching ...": "กำลังค้นหาเว็บ ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "คิดอย่างลึกซึ้งและให้ประสิทธิภาพเท่ากับ o3 ในการทำงานเช่น คณิตศาสตร์ และการเขียนสร้างสรรค์"
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "คิดอย่างลึกซึ้งและให้ประสิทธิภาพเท่ากับ o3 ในการทำงานเช่น คณิตศาสตร์ และการเขียนสร้างสรรค์",
+  "KYC verification is limited to once every 10 minutes, Please try again later.": "การยืนยัน KYC จำกัดให้ทำได้เพียงครั้งเดียว ทุกๆ 10 นาที โปรดลองอีกครั้งในภายหลัง",
+  "A single IP address can be used for a maximum of two KYC verifications": "ที่อยู่ IP เดียวสามารถใช้สำหรับการยืนยัน KYC ได้สูงสุดสองครั้ง",
+  "Check kyc failed, Please try again.": "การยืนยัน KYC ล้มเหลว โปรดลองอีกครั้ง",
+  "One email can only be used for KYC verification once": "ที่อยู่อีเมล์หนึ่งสามารถใช้สำหรับการยืนยัน KYC ได้เพียงครั้งเดียวเท่านั้น",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "ระบุว่าข้อความของคำถามครั้งสุดท้ายในคำถามข้างต้นเกี่ยวกับอะไร และแสดงเฉพาะข้อความเท่านั้น",
+  "Summarize based on the above YouTube search results:": "สรุปตามผลการค้นหา YouTube ด้านบน:",
+  "Summarize based on the above Twitter search results:": "สรุปตามผลการค้นหา Twitter ด้านบน:",
+  "Summarize based on the above web search results:": "สรุปตามผลการค้นหาเว็บไซต์ด้านบน:"
 }
